# libESPER-V2

./: CMakeLists.txt  README-NUGET.md  README.md  libESPER-V2.csproj  libESPER-V2.sln
.github/workflows/: NuGet.yml  dotnet.yml
Transforms/: Compression.cs  ESPER-Transforms.cs
Transforms/Internal/: Forward.cs  PitchDetection.cs
Utils/: Fourier.cs  Graph.cs  Interpolation.cs  Mel.cs
libESPER-V2/: ESPERAudio.cs  libESPER-V2.csproj
libESPER-V2.Tests/: MockESPERAudioFactory.cs  MockFactories.cs  libESPER-V2.Tests.csproj
libESPER-V2.Tests/Core/: EsperAudioTest.cs
libESPER-V2.Tests/Effects/: EffectsTest.cs  PitchShiftTest.cs  PitchshiftTest.cs
libESPER-V2.Tests/Transforms/: CompressionTest.cs  CutCombineTest.cs  EsperTransformsTest.cs  SerializationTest.cs  StretchTest.cs
libESPER-V2.Tests/Utils/: DagTest.cs  GraphTest.cs  MelTest.cs  PhasesTest.cs  WhittakerShannonTest.cs
libESPER-V2.Transforms/: Compression.cs  ESPER-Transforms.cs
libESPER-V2.Transforms/libESPER-V2.Transforms.Internal/: PitchDetection.cs
libESPER-V2.Utils/: Fourier.cs  Graph.cs  Interpolation.cs  Mel.cs
libESPER-V2/Core/: EsperAudio.cs
libESPER-V2/Effects/: Breathiness.cs  Brightness.cs  Dynamics.cs  FormantShift.cs  Growl.cs  Mouth.cs  PitchShift.cs  Pitchshift.cs  Roughness.cs  Steadiness.cs
libESPER-V2/Properties/: AssemblyInfo.cs
libESPER-V2/Transforms/: Compression.cs  Cut-Combine.cs  ESPER-Transforms.cs  Serialization.cs  Stretch.cs
libESPER-V2/Utils/: Graph.cs  KalmanFilter.cs  Mel.cs  PELT.cs  Phases.cs  WhittakerShannon.cs
src/: esper.h  fft.c  fft.h  test.c
(+7 files in other folders)
